fixes banner CSS (flex property) on IE 11

--- a/assets/css/lsx-rtl.css
+++ b/assets/css/lsx-rtl.css
@@ -395,11 +395,11 @@ figure { max-width: 100%; }
 
 @media (min-width: 768px) { .breadcrumbs-container, .archive-header-wrapper .breadcrumbs-container { margin-right: -9999px; margin-left: -9999px; padding-right: 9999px; padding-left: 9999px; width: auto; } }
 
-@media (min-width: 992px) { .page-has-banner-full .header-wrap { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; min-height: 100vh; } }
+@media (min-width: 992px) { html:not(.ie) .page-has-banner-full .header-wrap { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; min-height: 100vh; } }
 
-@media (min-width: 992px) { .page-has-banner-full.admin-bar .header-wrap { min-height: calc(100vh - 32px); } }
+@media (min-width: 992px) { html:not(.ie) .page-has-banner-full.admin-bar .header-wrap { min-height: calc(100vh - 32px); } }
 
-@media (min-width: 992px) { .page-has-banner-full .page-banner-wrap { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; } }
+@media (min-width: 992px) { html:not(.ie) .page-has-banner-full .page-banner-wrap { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex: 1; flex: 1; } }
 
 .page-banner-wrap .page-banner { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; overflow: hidden; position: relative; width: 100%; }
 
